--- a/src/main/java/com/boquerontech/supermercadoboqueron/login/Login.form
+++ b/src/main/java/com/boquerontech/supermercadoboqueron/login/Login.form
@@ -8,7 +8,7 @@
       <Color blue="fd" green="fd" red="e9" type="rgb"/>
     </Property>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-      <Color id="Default Cursor"/>
+      <Color id="Cursor Por defecto"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -133,7 +133,7 @@
               </Border>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Hand Cursor"/>
+              <Color id="Cursor Por defecto"/>
             </Property>
           </Properties>
           <Events>
