--- a/src/main/java/com/boquerontech/supermercadoboqueron/inventario/Inventario.form
+++ b/src/main/java/com/boquerontech/supermercadoboqueron/inventario/Inventario.form
@@ -62,19 +62,19 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JComboBox" name="jComboBox1">
+        <Component class="javax.swing.JComboBox" name="maxStockCombo">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="18" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="6">
-                <StringItem index="0" value="Min. Stock 10"/>
-                <StringItem index="1" value="Min. Stock 25"/>
-                <StringItem index="2" value="Min. Stock 50"/>
-                <StringItem index="3" value="Min. Stock 100"/>
-                <StringItem index="4" value="Min. Stock 200"/>
-                <StringItem index="5" value="Min. Stock 500"/>
+                <StringItem index="0" value="Max. Stock 10"/>
+                <StringItem index="1" value="Max. Stock 25"/>
+                <StringItem index="2" value="Max. Stock 50"/>
+                <StringItem index="3" value="Max. Stock 100"/>
+                <StringItem index="4" value="Max. Stock 200"/>
+                <StringItem index="5" value="Max. Stock 500"/>
               </StringArray>
             </Property>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -87,6 +87,9 @@
               <Dimension value="[200, 31]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="maxStockFilterChanged"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
@@ -299,6 +302,9 @@
               <Color id="Cursor de Mano"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="anadirProducto"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
               <GridBagConstraints gridX="1" gridY="0" gridWidth="1" gridHeight="1" fill="0" ipadX="0" ipadY="0" insetsTop="20" insetsLeft="5" insetsBottom="20" insetsRight="5" anchor="10" weightX="0.0" weightY="0.0"/>
